--- a/gui/liquidacion/liquidaciones.ui
+++ b/gui/liquidacion/liquidaciones.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>778</width>
+    <width>745</width>
     <height>481</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="1">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="10,90">
+   <item row="0" column="0">
     <widget class="QPushButton" name="pushButton_liquidaciones">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -31,12 +31,12 @@
      </property>
      <property name="styleSheet">
       <string notr="true">#pushButton_liquidaciones{
-background-color:#055314;
-color: #FFFFFF;
+background-color:#FFFFFF;
+color: #000000;
 }
 #pushButton_liquidaciones:hover{
-background-color:#37760D;
-color: #FFFFFF;
+background-color:#F1F1F1;
+color: #000000;
 }</string>
      </property>
      <property name="text">
@@ -54,60 +54,7 @@ color: #FFFFFF;
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
-    <widget class="QPushButton" name="pushButton_procesador">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">#pushButton_procesador{
-background-color:#2C89AC;
-color: #FFFFFF;
-}
-
-#pushButton_procesador:hover{
-background-color:#409FC5 ;
-}</string>
-     </property>
-     <property name="text">
-      <string>Procesar Archivo BET/BEN</string>
-     </property>
-     <property name="icon">
-      <iconset>
-       <normaloff>../iconos/computer.ico</normaloff>../iconos/computer.ico</iconset>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>30</width>
-       <height>30</height>
-      </size>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="3" column="1">
+   <item row="0" column="1">
     <widget class="QPushButton" name="pushButton_liquidaciones_2">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -124,12 +71,12 @@ background-color:#409FC5 ;
      </property>
      <property name="styleSheet">
       <string notr="true">#pushButton_liquidaciones_2{
-background-color:#7BBF4B;
-color: #FFFFFF;
+background-color:#FFFFFF;
+color: #000000;
 }
 #pushButton_liquidaciones_2:hover{
-background-color:#84B363;
-color: #FFFFFF;
+background-color:#F1F1F1;
+color: #000000;
 }</string>
      </property>
      <property name="text">
@@ -147,70 +94,51 @@ color: #FFFFFF;
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+   <item row="0" column="2">
+    <widget class="QPushButton" name="pushButton_procesador">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
-     <property name="sizeHint" stdset="0">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">#pushButton_procesador{
+background-color:#FFFFFF;
+color: #000000;
+}
+#pushButton_procesador:hover{
+background-color:#F1F1F1;
+color: #000000;
+}</string>
+     </property>
+     <property name="text">
+      <string>Procesar Archivo BET/BEN</string>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>../iconos/computer.ico</normaloff>../iconos/computer.ico</iconset>
+     </property>
+     <property name="iconSize">
       <size>
-       <width>20</width>
-       <height>40</height>
+       <width>30</width>
+       <height>30</height>
       </size>
      </property>
-    </spacer>
+    </widget>
    </item>
-   <item row="6" column="1">
-    <spacer name="verticalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="2" column="2">
-    <spacer name="horizontalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="5" column="1">
-    <spacer name="verticalSpacer_3">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="1" column="1">
-    <spacer name="verticalSpacer_4">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
+   <item row="1" column="0" colspan="3">
+    <widget class="QStackedWidget" name="stackedWidget">
+     <widget class="QWidget" name="page"/>
+     <widget class="QWidget" name="page_2"/>
+    </widget>
    </item>
   </layout>
  </widget>
