--- a/gui/detalles/detalleUsuarios.ui
+++ b/gui/detalles/detalleUsuarios.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>802</width>
-    <height>557</height>
+    <width>816</width>
+    <height>464</height>
    </rect>
   </property>
   <property name="palette">
@@ -428,53 +428,43 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowstretch="12,85,3">
-   <item row="0" column="0" colspan="2">
-    <widget class="QLineEdit" name="lineEdit"/>
-   </item>
-   <item row="0" column="2" colspan="2">
-    <widget class="QPushButton" name="pushButton_2">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="0,100,0,0">
+   <item row="0" column="0" colspan="3">
+    <widget class="QLabel" name="label_6">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="font">
       <font>
-       <pointsize>10</pointsize>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
-      <string>Buscar</string>
-     </property>
-     <property name="icon">
-      <iconset>
-       <normaloff>../iconos/search.ico</normaloff>../iconos/search.ico</iconset>
+      <string>Control de Usuarios</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="6">
-    <widget class="QPushButton" name="pushButton">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Cargar</string>
-     </property>
-     <property name="icon">
-      <iconset>
-       <normaloff>../iconos/shopping cart full.ico</normaloff>../iconos/shopping cart full.ico</iconset>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="7">
+   <item row="1" column="0" colspan="5">
     <widget class="QTableView" name="tableView"/>
    </item>
    <item row="2" column="0">
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="label_3">
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
      <property name="styleSheet">
-      <string notr="true">#label{
+      <string notr="true">#label_3{
 background-color:#37760D;
 color: #FFFFFF;
 }</string>
@@ -486,11 +476,11 @@ color: #FFFFFF;
       <enum>QFrame::Sunken</enum>
      </property>
      <property name="text">
-      <string>Total Cobrado</string>
+      <string>Codigo:</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1" colspan="2">
+   <item row="2" column="1">
     <widget class="QLineEdit" name="lineEdit_2">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -498,12 +488,28 @@ color: #FFFFFF;
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
     </widget>
    </item>
-   <item row="2" column="3">
-    <widget class="QLabel" name="label_2">
+   <item row="2" column="2">
+    <widget class="QLabel" name="label_4">
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
      <property name="styleSheet">
-      <string notr="true">#label_2{
+      <string notr="true">#label_4{
 background-color:#37760D;
 color: #FFFFFF;
 }</string>
@@ -515,35 +521,59 @@ color: #FFFFFF;
       <enum>QFrame::Sunken</enum>
      </property>
      <property name="text">
-      <string>Rechazados</string>
+      <string>Nombre</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="4">
-    <widget class="QLineEdit" name="lineEdit_3">
+   <item row="2" column="3">
+    <widget class="QLineEdit" name="lineEdit_4">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-    </widget>
-   </item>
-   <item row="2" column="5">
-    <widget class="QPushButton" name="pushButton_3">
      <property name="font">
       <font>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
+    </widget>
+   </item>
+   <item row="2" column="4">
+    <widget class="QPushButton" name="btn_nuevo_2">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>200</width>
+       <height>200</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
      <property name="text">
-      <string>Exportar Archivo</string>
+      <string>Eliminar (Supr)</string>
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>../iconos/documents.ico</normaloff>../iconos/documents.ico</iconset>
+       <normaloff>../iconos/delete.ico</normaloff>../iconos/delete.ico</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -551,29 +581,96 @@ color: #FFFFFF;
        <height>30</height>
       </size>
      </property>
+     <property name="shortcut">
+      <string>Ctrl+N</string>
+     </property>
     </widget>
    </item>
-   <item row="2" column="6">
-    <widget class="QPushButton" name="pushButton_4">
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_5">
      <property name="font">
       <font>
+       <family>MS Shell Dlg 2</family>
        <pointsize>10</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
+     <property name="styleSheet">
+      <string notr="true">#label_5{
+background-color:#37760D;
+color: #FFFFFF;
+}</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
      <property name="text">
-      <string>Procesar Archivo</string>
+      <string>Detalles:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="4">
+    <widget class="QPushButton" name="btn_nuevo">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>200</width>
+       <height>200</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="text">
+      <string>Guardar (Ctrl + G)</string>
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>../iconos/refresh.ico</normaloff>../iconos/refresh.ico</iconset>
+       <normaloff>../iconos/save.ico</normaloff>../iconos/save.ico</iconset>
      </property>
      <property name="iconSize">
       <size>
        <width>30</width>
        <height>30</height>
       </size>
+     </property>
+     <property name="shortcut">
+      <string>Ctrl+N</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1" colspan="3">
+    <widget class="QLineEdit" name="lineEdit_5">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
      </property>
     </widget>
    </item>
